# c-lang-period2

./: cml.txt  new.c  new_def.h
lab_1b/: README.md
lab_1bb/: CMakeLists.txt  main.c  my_pico_definitions.h
lab_2/: .gitignore  .main.c.kate-swp  CMakeCache.txt  CMakeLists.txt  main.c  my_pico_definitions.h  my_pico_functions.c  numbers.py
lab_20/: CMakeLists.txt
lab_3/: CMakeLists.txt  main.c  main2.c  my_pico_definitions.h  my_pico_functions.c  task.txt
lab_4/: CMakeLists.txt  buildcommand.txt  main.c  my_pico_definitions.h  my_pico_functions.c  task1.txt  task2.txt  test program.txt
lab_4_2/: CMakeLists.txt  main.c  mainold.c  my_pico_definitions.h  my_pico_functions.c  new_my_pico_functions.c
lab_5_1/: .gitignore  main.c  main_with_entertoinput.c  my_pico_definitions.h  my_pico_functions.c
reservv1411/: CMakeLists.txt
